# smart-vent

./: .gitignore  README.md
.github/workflows/: firmware.yml  provision.yml  sd-image.yml
.zed/: settings.json
docs/: architecture.md  battery-carrier-board.md  communication-protocol.md  dev-setup.md  handbook.md  mobile-api.md  mobile-app-spec.md  provider-runbook.md  rfc.md  runbook.md
docs/adr/: 001-thread-credential-provisioning.md  002-dual-protocol-architecture.md  003-otbr-dataset-persistence.md  README.md
docs/diagrams/: architecture-simple.d2  hub-hardware.d2  protocol-stack.d2  security-model.d2  state-machine.d2  system-overview.d2  test-architecture.d2  vent-node.d2  wiring.d2
docs/guides/: alexa-setup.md  commissioning.md  flash-firmware.md  google-home-setup.md  home-assistant-matter.md  home-assistant.md  migration.md  multi-admin.md  onboarding.md  quick-start-matter.md  setup-dev-env.md  setup-rpi.md
docs/hardware/: wiring.md
firmware/shared-protocol/: Cargo.toml
firmware/shared-protocol/src/: lib.rs
firmware/vent-controller/: Cargo.toml  partitions.csv  sdkconfig.defaults
firmware/vent-controller/.cargo/: config.toml
firmware/vent-controller/components/esp_matter_bridge/: CMakeLists.txt  idf_component.yml  matter_bridge.cpp
firmware/vent-controller/components/esp_matter_bridge/include/: matter_bridge.h
firmware/vent-controller/components/ot_coap_config/: CMakeLists.txt
firmware/vent-controller/src/: carrier_board.rs  coap.rs  identity.rs  main.rs  matter.rs  power.rs  servo.rs  state.rs  thread.rs
hardware/pcb/carrier-board-v1/: .gitignore  README.md  place_smart_vent.py  smart_vent.net  smart_vent_board.py  smart_vent_no_led.net
hardware/pcb/carrier-board-v1/firmware-reference/: power_indicator.rs
hardware/pcb/carrier-board-v1/kicad-project/: README.md  build_board.py  drc_report.json  drc_report_no_led.json  nudge_apart.py  smart_vent_v1.kicad_pcb  smart_vent_v1.kicad_pro  smart_vent_v1_no_led.kicad_pcb  smart_vent_v1_no_led.kicad_pro
hardware/pcb/carrier-board-v1/kicad-project/gerbers-unrouted-no-led/: README.md  smart_vent_v1_no_led-B_Adhesive.gba  smart_vent_v1_no_led-B_Courtyard.gbr  smart_vent_v1_no_led-B_Cu.gbl  smart_vent_v1_no_led-B_Fab.gbr  smart_vent_v1_no_led-B_Mask.gbs  smart_vent_v1_no_led-B_Paste.gbp  smart_vent_v1_no_led-B_Silkscreen.gbo  smart_vent_v1_no_led-Edge_Cuts.gm1  smart_vent_v1_no_led-F_Adhesive.gta  smart_vent_v1_no_led-F_Courtyard.gbr  smart_vent_v1_no_led-F_Cu.gtl  smart_vent_v1_no_led-F_Fab.gbr  smart_vent_v1_no_led-F_Mask.gts  smart_vent_v1_no_led-F_Paste.gtp  smart_vent_v1_no_led-F_Silkscreen.gto  smart_vent_v1_no_led-Margin.gbr  smart_vent_v1_no_led-User_1.gbr  smart_vent_v1_no_led-User_Comments.gbr  smart_vent_v1_no_led-User_Drawings.gbr  smart_vent_v1_no_led-User_Eco1.gbr  smart_vent_v1_no_led.drl  (+2 more)
homeassistant/: README.md  automations.yaml  scripts.yaml
homeassistant/blueprints/automation/vent_control/: schedule_vent_by_floor.yaml  schedule_vent_by_room.yaml
homeassistant/custom_components/vent_control/: __init__.py  config_flow.py  const.py  coordinator.py  cover.py  manifest.json  services.yaml  strings.json
homeassistant/dashboards/: vents.yaml
homeassistant/helpers/: schedule_helpers.yaml
hub/: pyproject.toml
hub/src/vent_hub/: __init__.py  cli.py  coap_client.py  config.py  device_registry.py  discovery.py  group_manager.py  models.py  scheduler.py
hub/tests/: conftest.py  test_coap_client.py  test_device_registry.py  test_discovery.py  test_group_manager.py  test_models.py  test_scheduler.py
hub/tests/mocks/: mock_devices.py
pi/: .env.example  README.md  docker-compose.yaml  install.sh
pi/config/homeassistant/: configuration.yaml
pi/config/modules-load.d/: otbr.conf
pi/firstboot/: README.md  wizard.py
pi/firstboot/static/: style.css
pi/firstboot/templates/: index.html  joining.html
pi/systemd/: smart-vent-firstboot.service  smart-vent.service
sd-image/: README.md  config
sd-image/stage-smart-vent/: EXPORT_IMAGE  prerun.sh
sd-image/stage-smart-vent/00-add-docker-repo/: 00-run-chroot.sh
sd-image/stage-smart-vent/00-install/: 00-run-chroot.sh
sd-image/stage-smart-vent/00-install-packages/: 00-packages
sd-image/stage-smart-vent/01-install-packages/: 00-packages
sd-image/stage-smart-vent/02-copy-runtime/: 01-run.sh
sd-image/stage-smart-vent/02-enable-services/: 00-run-chroot.sh
sd-image/stage-smart-vent/03-enable-services/: 00-run-chroot.sh
tests/integration/: test_alexa.md  test_google_home.md  test_group_control.py  test_hub_to_simulator.py  test_matter_chip_tool.md
tools/provision/: README.md  pyproject.toml
tools/provision/smart_vent_provision/: __init__.py  cli.py  devices.py  flasher.py  hub_release.py  imager.py  inventory.py  kit_card.py  labels.py  qr.py  release.py  serial_capture.py
tools/provision/tests/: test_hub_release.py  test_imager.py  test_inventory.py  test_labels.py  test_qr.py  test_release.py
tools/qr-generator/: generate_qr.py
tools/scripts/: setup_ha.sh  setup_otbr.sh
tools/simulator/: pyproject.toml
tools/simulator/src/vent_simulator/: __init__.py  cli.py  simulator.py  virtual_vent.py
(+23 files in other folders)
